edited some spacing issues on UI

--- a/src/_app/components/_common/footer/footer.component.css
+++ b/src/_app/components/_common/footer/footer.component.css
@@ -17,11 +17,15 @@
     animation: bottomUp 1s;
 }
 
-#footer p{
+#footer-content{
+    margin-top:5px;
+    height:45px;
+}
+
+#footer-content p{
     color: white;
     text-align: center;
 }
-
 /**
 *   padding-top down Animation
 **/
